[package]
name = "nisa_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

#core comes with rust binary but is required by nonstd methods implicitly precompiled for specific targets
#build-std allows to recompile core    and other std libs instead of using precompiled 
# in .cargo/config.toml
#[unstable]
#build-std = ["core", "compiler_builtins"]
